src/objects/Vend_Customer__c.object
<CustomObject>
    <description>Holds the Customer data from Vend</description>
    <fields>
        <fullName>Contact_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked means that the record has been processed and the Salesforce Contact created or updated.</description>
        <label>Contact Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>customer_code__c</fullName>
        <description>Holds the Customer Code that comes from Vend.</description>
        <label>Customer Code</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>Holds the Customer ID that comes from Vend.</description>
        <externalId>true</externalId>
        <label>Vend Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Vend Customer</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Vend Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vend Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>